--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Installing catalyst
         run : npm i -g zcatalyst-cli
       - name: Installing Packages for 'Node'
-        run: cd functions/Node/ && npm install --omit=dev
+        run: cd functions/Node/
+      - name: Installing dependencies
+        run:  npm install --omit=dev
       - name: Deploying code to catalyst
         run: catalyst deploy --project gitIntegration --org 771562951 --token m_1004.559dbfe96c6d98df7d8e2cf47df4d627.53aa1d60db064679bbbb99cff01be7c2
